Thu Mar 17 04:55:30 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/fuzz.pl:

          Added check at level 6 for numeric log priorities in DAnCE.

Wed Mar 16 14:34:57 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_pwd.h:
          Removed legacy _posix_getpwnam_r() declaration.

Wed Mar 16 14:27:15 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_pwd.inl:
        * ace/config-lynxos.h:
          Renamed ACE_HAS_NONSTD_GETPWNAM_R to ACE_HAS_LYNXOS4_GETPWNAM_R
          since LynxOS 4.x is the only platform that has nonstandard
          getpwnam_r() implementation.

Wed Mar 16 14:12:56 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-7.h:
          Added ACE_LACKS_STRTOK_R ACE_LACKS_LOCALTIME_R.

Wed Mar 16 14:00:26 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_time.cpp:
          Rearranged localtime_r() code to eliminate macro
          ACE_HAS_REENTRANT_FUNCTIONS.

        * ace/config-win32-mingw.h:
          Added ACE_LACKS_STRTOK_R ACE_LACKS_LOCALTIME_R.

Wed Mar 16 13:49:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ICMP_Socket.cpp:
          Use ACE_OS

Wed Mar 16 12:08:36 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-7.h: New config for AIX 7.

Wed Mar 16 09:00:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux-common.h:
          Fixed format specifiers for 64bit PPC

Wed Mar 16 06:26:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed ACE_HAS_PTHREADS_STD.

Tue Mar 15 21:24:11 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-kfreebsd.h:
        * ace/config-lynxos.h:
        * ace/config-macosx-leopard.h:
        * ace/config-openbsd.h:
        * ace/config-win32-interix.h:
          Removed ACE_HAS_PTHREADS_STD.

        * tests/Service_Config_Test.cpp:
          Check features against ACE_HAS_PTHREADS instead of
          ACE_HAS_PTHREADS_STD.
